2002-02-20  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (ix86_expand_vector_move): Use the mode
	of the operand, rather than assuming TImode.
	(ix86_expand_binop_builtin): Cope with commutative patterns
	using nonimmediate_operand for both operands.
	(ix86_expand_timode_binop_builtin): Likewise.
	(ix86_expand_store_builtin): Validate operand 1.
	(ix86_expand_unop1_builtin): Likewise.

2002-02-20  Philip Blundell  <philb@gnu.org>
	
	PR 5705
	* config/arm/arm.h (HARD_REGNO_RENAME_OK): New macro.

2002-02-20  Richard Henderson  <rth@redhat.com>

	PR c/5615
	* expr.h (ARGS_SIZE_TREE): Convert size.var to ssizetype.

2002-02-20  Tom Tromey  <tromey@redhat.com>

	* config/fr30/fr30.h (DWARF_LINE_MIN_INSTR_LENGTH): Removed.
	* config/sh/sh.h (DWARF_LINE_MIN_INSTR_LENGTH): Removed.
	* config/pj/pj.h (DWARF_LINE_MIN_INSTR_LENGTH): Removed.
	* config/cris/cris.h (DWARF_LINE_MIN_INSTR_LENGTH): Removed.
	* dwarf2out.c (DWARF_LINE_MIN_INSTR_LENGTH): Define
	unconditionally.

Wed Feb 20 00:03:25 EST 2002 Alan Matsuoka <alanm@redhat.com>

	* config/rs6000/rs6000.h (LEGITIMATE_OFFSET_ADDRESS_P): Look
	  for (const_int 0) in X not just INTVAL.

2002-02-20  Joseph S. Myers  <jsm28@cam.ac.uk>

	* doc/extend.texi: Avoid or reduce overfull hboxes.

2002-02-20  Diego Novillo  <dnovillo@redhat.com>

	* expmed.c (store_bit_field): Do not store bit fields using SUBREG
	operations if the field does not start at a mode boundary.

2001-02-20	Joel Sherrill <joel@OARcorp.com>

	* config/a29k/rtems.h, config/arm/rtems-elf.h, config/h8300/rtems.h,
	config/mips/rtems.h: Use new style of -Asystem= rather than -Asystem().
	Also done for -Acpu and -Amachine.

2002-02-20  Neil Booth  <neil@daikokuya.demon.co.uk>

	* cppinit.c (init_dependency_output): Take deps output file
	from -o if none given with -MF.  Suppress normal output.
	* gcc.c (cpp_unique_options): Have -M and -MM imply -E.	
	* doc/cpp.texi, doc/invoke.texi: Update.

2002-02-19  Zack Weinberg  <zack@codesourcery.com>
