@@ -2,6 +2,8 @@
 
 	* gcc.c-torture/execute/20020219-1.c: New test.
 
+	* gcc.dg/20020219-1.c: New test.
+
 2002-02-17  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/execute/20020216-1.c: New test.
